Fix HTML structure and image source path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="overlay"></div>
   <div class="container">
     <header>
-      <img src="image/95.jpg" alt="Logo SCP" class="logo">
+      <img src="95.jpg" alt="Logo SCP" class="logo">
       <h1>SCP RP Roblox</h1>
       <p>Demande de débanissement officielle</p>
       <a href="https://discord.gg/X8PaSnr7nH" class="discord-link" target="_blank">Rejoindre le Discord</a>
@@ -50,3 +50,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
